5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1596_1446.log
== TEST (2019-03-26 18:36:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.168622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.162835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.289477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:01:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.254188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:01:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.226903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:01:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.188473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:01:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:03:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.223289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:04:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.130827
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:48:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.100677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:48:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.165192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.152662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.339123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a= round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.13834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a= round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:50:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.124449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:50:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.142683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:50:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.189396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:50:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.100266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:50:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.143344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 6, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
